# wallet-decoder

./: Cargo.toml  README.md  build.rs  deploy.sh  index.html  package.json  tari_address_generator.d.ts  tari_address_generator.js  tari_address_generator_bg.wasm  tari_address_generator_bg.wasm.d.ts  wallet_decoder.d.ts  wallet_decoder.js  wallet_decoder_bg.wasm  wallet_decoder_bg.wasm.d.ts
.github/workflows/: deploy.yml  release.yml
docs/: README.md  index.html  wallet_decoder_bg.wasm
examples/: basic_usage.rs  node-example.js
examples/node/: index.js
examples/python/: README.md  tari_address_decoder.py
examples/web/: index.html  index.js
proto/: base_node.proto  block.proto  transaction.proto
scripts/: fetch-proto.sh
src/: address.rs  checksum.rs  cipher_seed.rs  cli.rs  common_types.rs  crypto_primitives.rs  emoji.rs  error.rs  keys.rs  lib.rs  main.rs  network.rs  range_proof.rs  tari_types.rs  utils.rs  utxo.rs  wallet.rs  wasm.rs  wordlist.rs
src/tests/: range_proof_tests.rs
src/transactions/: mod.rs
src/transactions/transaction_components/: mod.rs  transaction_output.rs  transaction_output_tests.rs
src/utxo/: range_proof.rs  rpc.rs  scanner.rs  types.rs
src/utxo/rpc_generated/: mod.rs  tari.rpc.rs
