[package]
name = "wallet-decoder"
version = "1.0.3"
edition = "2021"
description = "A Rust library for generating and managing Tari wallet addresses"
license = "BSD-3-Clause"
authors = ["Krakaw <krakaw@krakaw.com>"]
repository = "https://github.com/krakaw/wallet-decoder"


[dependencies]
curve25519-dalek = "4.1"
blake2 = "0.10"
bip39 = "2.0"
bs58 = "0.5"
hex = "0.4"
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = "0.3"
getrandom = { version = "0.2" }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
argon2 = "0.5"
crc32fast = "1.4.2"
chacha20 = "0.9.1"
once_cell = "1.21.3"
lazy_static = "1.4"
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "tari_address_generator"
crate-type = ["lib", "cdylib"]

[features]
default = []
wasm-bindgen = [
    "getrandom/js",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "dep:serde-wasm-bindgen"
]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
features = ["console", "Performance", "PerformanceTiming"]
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6"
optional = true

[dev-dependencies.wasm-bindgen-test]
version = "0.3" 

